# devsync

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  VISION.md  mkdocs.yml  pyproject.toml  tasks.py
.claude/commands/: cleanup.md  code-review.md  commit.md  deploy.md  dev-help.md  ideate.md  new-issue.md  next.md  pr-check.md  start-work.md  submit-pr.md  triage.md  write-docs.md
.claude/rules/: commit-format.md  output-formatting.md  product-vision.md  security-patterns.md  test-requirements.md
.github/workflows/: benchmark.yml  ci.yml  code-review.yml  docs.yml  pr-automation.yml  publish.yml  release-drafter.yml
aiconfigkit/ai_tools/: base.py  capability_registry.py  detector.py  kiro.py  translator.py
aiconfigkit/cli/: main.py  package.py  package_create.py  template_init.py
aiconfigkit/core/: component_detector.py  models.py  package_creator.py
aiconfigkit/utils/: paths.py
devsync/ai_tools/: aider.py  amazonq.py  amp.py  anteroom.py  antigravity.py  augment.py  base.py  capability_registry.py  codex.py  continuedev.py  detector.py  gemini.py  jetbrains.py  junie.py  opencode.py  openhands.py  tabnine.py  trae.py  translator.py  zed.py
devsync/cli/: extract.py  main.py  setup.py  tools.py
devsync/core/: component_detector.py  extractor.py  models.py  package_manifest_v2.py
devsync/utils/: paths.py
docs/: index.md
docs/advanced/: config-types.md  conflict-resolution.md  contributing.md  project-root-detection.md
docs/cli/: delete.md  download.md  extract.md  index.md  install.md  list.md  package.md  setup.md  tools.md  uninstall.md  update.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/ide-integrations/: claude-code.md  codex.md  copilot.md  cursor.md  index.md  other-ides.md  windsurf.md
docs/mcp-server/: ai-merge-flow.md  backups-and-recovery.md  ide-setup.md  index.md  installation.md  team-profiles.md  tools-reference.md
docs/reference/: changelog.md  cli-reference.md  yaml-schemas.md
docs/tutorials/: ai-merge-workflow.md  ci-cd-integration.md  custom-packages.md  migrate-existing-configs.md  multi-ide-workflow.md  onboard-new-developer.md  team-config-repo.md
skill/write-docs/: SKILL.md
tests/e2e/: test_comprehensive.py
tests/unit/: test_ai_tools_aider.py  (+23 more)
(+7 files in other folders)
